--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,111 @@
+@import url("https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap");
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --background: 233 20% 95%;
+  --foreground: 233 5% 0%;
+  --card: 233 20% 90%;
+  --card-foreground: 233 5% 10%;
+  --popover: 233 20% 95%;
+  --popover-foreground: 233 95% 0%;
+  --primary: 233 88% 58%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 233 20% 70%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 195 20% 85%;
+  --muted-foreground: 233 5% 35%;
+  --accent: 195 20% 80%;
+  --accent-foreground: 233 5% 10%;
+  --destructive: 0 50% 30%;
+  --destructive-foreground: 233 5% 90%;
+  --border: 233 20% 50%;
+  --input: 233 20% 18%;
+  --ring: 233 88% 58%;
+  --radius: 0.5rem;
+}
+.dark {
+  --background: 233 20% 5%;
+  --foreground: 233 5% 90%;
+  --card: 233 20% 0%;
+  --card-foreground: 233 5% 90%;
+  --popover: 233 20% 5%;
+  --popover-foreground: 233 5% 90%;
+  --primary: 233 88% 58%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 233 20% 10%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 195 20% 15%;
+  --muted-foreground: 233 5% 60%;
+  --accent: 195 20% 15%;
+  --accent-foreground: 233 5% 90%;
+  --destructive: 0 50% 30%;
+  --destructive-foreground: 233 5% 90%;
+  --border: 233 20% 18%;
+  --input: 233 20% 18%;
+  --ring: 233 88% 58%;
+  --radius: 0.5rem;
+}
+
+.cherry-bomb-one-regular {
+  font-family: "Cherry Bomb One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  h1 {
+    font-family: "Cherry Bomb One", system-ui;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.cherry-bomb-one-regular {
+  font-family: "Cherry Bomb One", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
